# specs-physics

./: .gitignore  Cargo.toml
examples/: amethyst.rs  collision.rs
src/: bodies.rs  colliders.rs  lib.rs  math.rs  pose.rs  position.rs
src/bodies/: base.rs  builder.rs  cross.rs  data.rs  mod.rs  rigid.rs  status.rs
src/bodies/components/: internal.rs  mod.rs  position.rs  status.rs
src/bodies/rigid/: components.rs  cross.rs  internal.rs  mod.rs
src/systems/: mod.rs  physics_stepper.rs  sync_bodies_from_physics.rs  sync_bodies_to_physics.rs  sync_colliders_to_physics.rs  sync_parameters_to_physics.rs
