[package]
name = "specs-physics"
version = "0.3.0"
authors = ["Benjamin Amling <benjamin@amling.net>", "Kel <x@unclear.info>", "jojolepro <jojolepromain@gmail.com>"]
repository = "https://github.com/amethyst/specs-physics.git"
homepage = "https://github.com/amethyst/specs-physics.git"
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/specs-physics"
description = "nphysics integration for the Specs entity component system"

keywords = ["specs", "nphysics", "nphysics3d"]

[features]
default = ["dim3", "serialization"]

dim2 = ["ncollide2d", "nphysics2d"]
dim3 = ["ncollide3d", "nphysics3d"]

serialization = ["serde", "nalgebra/serde-serialize"]

amethyst-transform = ["amethyst"]
amethyst-example = ["amethyst", "amethyst/renderer"]

[dependencies]

log = "0.4.8"
bitflags = "1.1.0"
objekt = "0.1.2"
shrinkwraprs = "0.2.1"

specs = { version = "0.15.0", features = ["specs-derive"] }
specs-hierarchy = { git = "https://github.com/cedric-h/specs-hierarchy.git", branch = "update-specs" }

nalgebra = "0.18.0"

ncollide2d = { version = "0.20.1", optional = true }
ncollide3d = { version = "0.20.1", optional = true }
nphysics2d = { version = "0.12.0", optional = true }
nphysics3d = { version = "0.12.0", optional = true }

serde = { version = "1.0.98", features = ["derive"], optional = true }

# TODO on next amethyst release, and before next specs-physics release: update me!
[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
default-features = false
optional = true

[dev-dependencies]
simple_logger = "1.2.0"

[[example]]
name = "amethyst"
path = "examples/amethyst.rs"
required-features = ["amethyst-example"]
